--- a/$P@/SPA/SPA/SPA.vcxproj.filters
+++ b/$P@/SPA/SPA/SPA.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\AnswerTable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\$P%40\SPA\SPA\CFGNode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ASTNode.cpp">
@@ -150,6 +153,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\AnswerTable.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\$P%40\SPA\SPA\CFGNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
