Addition of PKBController so that AutoTester will only call
PKBController::initalizePKB() and not all the parsing function blah blah blah, All initalizations for PKB now goes to PKBController::initalizePKB() method

Preliminary CFGBuilder For JK To Fill in the Blanks to the illustrate use of CFGNode

Added isExist for proc and var tables methods

--- a/$P@/SPA/SPA/SPA.vcxproj
+++ b/$P@/SPA/SPA/SPA.vcxproj
@@ -16,10 +16,12 @@
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\ASTStmtLstNode.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\ASTStmtNode.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\CallsTable.h" />
+    <ClInclude Include="..\..\..\$P%40\SPA\SPA\CFGBuilder.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\CFGNode.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\DisjointSet.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\Helper.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\MultiQueryEval.h" />
+    <ClInclude Include="..\..\..\$P%40\SPA\SPA\PKBController.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\RulesOfEngagement.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\SynonymTable.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\FollowsTable.h" />
@@ -42,10 +44,12 @@
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\ASTStmtLstNode.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\ASTStmtNode.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\CallsTable.cpp" />
+    <ClCompile Include="..\..\..\$P%40\SPA\SPA\CFGBuilder.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\CFGNode.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\DisjointSet.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\Helper.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\MultiQueryEval.cpp" />
+    <ClCompile Include="..\..\..\$P%40\SPA\SPA\PKBController.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\RulesOfEngagement.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\SynonymTable.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\FollowsTable.cpp" />
