--- a/$P@/SPA/SPA/SPA.vcxproj
+++ b/$P@/SPA/SPA/SPA.vcxproj
@@ -28,6 +28,7 @@
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\PQLAffectsProcessor.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\PQLNextProcessor.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\RulesOfEngagement.h" />
+    <ClInclude Include="..\..\..\$P%40\SPA\SPA\StmtRef.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\SynonymTable.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\FollowsTable.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\ModifiesTable.h" />
@@ -61,6 +62,7 @@
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\PQLAffectsProcessor.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\PQLNextProcessor.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\RulesOfEngagement.cpp" />
+    <ClCompile Include="..\..\..\$P%40\SPA\SPA\StmtRef.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\SynonymTable.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\FollowsTable.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\ModifiesTable.cpp" />
