Update queries files, Update lol.bat to run all existing queries files

--- a/$P@/SPA/SPA/SPA.vcxproj
+++ b/$P@/SPA/SPA/SPA.vcxproj
@@ -20,11 +20,12 @@
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\CFGBuilder.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\CFGNode.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\DisjointSet.h" />
+    <ClInclude Include="..\..\..\$P%40\SPA\SPA\Dnf.h" />
+    <ClInclude Include="..\..\..\$P%40\SPA\SPA\FormNode.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\Helper.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\IntervalList.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\MultiQueryEval.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\NextTable.h" />
-    <ClInclude Include="..\..\..\$P%40\SPA\SPA\PatternRHSParser.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\PKBController.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\PQLAffectsProcessor.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\PQLContainPreprocessor.h" />
@@ -58,6 +59,8 @@
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\CFGBuilder.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\CFGNode.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\DisjointSet.cpp" />
+    <ClCompile Include="..\..\..\$P%40\SPA\SPA\Dnf.cpp" />
+    <ClCompile Include="..\..\..\$P%40\SPA\SPA\FormNode.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\Helper.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\IntervalList.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\MultiQueryEval.cpp" />
