--- a/$P@/SPA/SPA/SPA.vcxproj
+++ b/$P@/SPA/SPA/SPA.vcxproj
@@ -33,6 +33,7 @@
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\PQLNextProcessor.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\RulesOfEngagement.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\StmtRef.h" />
+    <ClInclude Include="..\..\..\$p%40\spa\spa\synonym.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\SynonymTable.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\FollowsTable.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\ModifiesTable.h" />
@@ -71,6 +72,7 @@
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\PQLNextProcessor.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\RulesOfEngagement.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\StmtRef.cpp" />
+    <ClCompile Include="..\..\..\$P%40\SPA\SPA\Synonym.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\SynonymTable.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\FollowsTable.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\ModifiesTable.cpp" />
